# DragonfireEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Client/: CMakeLists.txt  Main.cpp
Client/Rendering/: CMakeLists.txt
Client/Rendering/Interface/: BaseMesh.h  IMaterial.h  Interface.h
Client/Rendering/Vulkan/: CMakeLists.txt
Client/Rendering/Vulkan/Source/: Allocation.cpp  Allocation.h  Initialization.cpp  Interface.cpp  Macros.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderingEngine.cpp  RenderingEngine.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
Client/Source/: GameClient.cpp  GameClient.h
Config/: Graphics.toml
Database/: CreateMaterials.sql
Engine/: CMakeLists.txt
Engine/Include/: Asset.h  Engine.h  FileLocator.h  Game.h  Service.h  Settings.h  Util.h  World.h
Engine/Source/: Asset.cpp  Engine.cpp  FileLocator.cpp  Game.cpp  Service.cpp  Settings.cpp  Util.cpp  World.cpp
Shaders/: CMakeLists.txt
Shaders/Source/: Base.vert
Tools/: CMakeLists.txt  SpvToDb.cpp
Tools/AssetProcessor/: CMakeLists.txt
Tools/AssetProcessor/Source/: Main.cpp  Material.cpp  Material.h
Tools/ShaderCompiler/: CMakeLists.txt  Main.cpp
assets/models/: floor.glb
src/: CMakeLists.txt
src/client/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/client/rendering/: base_gltf_loader.h  base_renderer.cpp  base_renderer.h  camera.cpp  camera.h  drawable.h  material.cpp  material.h  model.cpp  model.h  vertex.h
src/client/rendering/vulkan/: allocation.cpp  allocation.h  context.cpp  context.h  descriptor_set.cpp  descriptor_set.h  gltf_loader.cpp  gltf_loader.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  staging_buffer.cpp  staging_buffer.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vulkan_headers.h  vulkan_material.h  vulkan_renderer.cpp  vulkan_renderer.h
src/core/: CMakeLists.txt  asset.cpp  asset.h  config.cpp  config.h  crash.cpp  crash.h  engine.cpp  engine.h  event.cpp  event.h  file.cpp  file.h
src/core/utility/: formatted_error.h  frame_allocator.cpp  frame_allocator.h  frame_allocator.test.cpp  rng.cpp  rng.h  small_vector.h  small_vector.test.cpp  string_hash.h  temp_containers.h  utility.h
src/core/voxel/: chunk.cpp  chunk.h  octree.cpp  octree.h  terrain.cpp  terrain.h  voxel.cpp  voxel.h  voxel.test.cpp
src/core/world/: game_world.cpp  game_world.h  transform.h
src/shaders/: CMakeLists.txt
src/shaders/glsl/: cull.comp  default.frag  default.vert  test.frag  textures.glsl
